--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,27 @@
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader ->
+        localProperties.load(reader)
+    }
+}
+
+def flutterRoot = localProperties.getProperty('flutter.sdk')
+if (flutterRoot == null) {
+    throw new Exception("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+}
+
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+if (flutterVersionCode == null) {
+    flutterVersionCode = '1'
+}
+
+def flutterVersionName = localProperties.getProperty('flutter.versionName')
+if (flutterVersionName == null) {
+    flutterVersionName = '1.0'
+}
+
+
 group 'com.jordanalcaraz.audiorecorder.audiorecorder'
 version '1.0-SNAPSHOT'
 
@@ -12,6 +36,7 @@ buildscript {
     }
 }
 
+
 rootProject.allprojects {
     repositories {
         google()
@@ -19,7 +44,15 @@ rootProject.allprojects {
     }
 }
 
-apply plugin: 'com.android.library'
+
+//apply plugin: 'com.android.library'
+
+apply plugin: 'com.android.application'
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
+flutter {
+    source '../..'
+}
 
 android {
     compileSdkVersion 28
@@ -32,3 +65,4 @@ android {
         disable 'InvalidPackage'
     }
 }
+
