--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,27 +1,3 @@
-def localProperties = new Properties()
-def localPropertiesFile = rootProject.file('local.properties')
-if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader('UTF-8') { reader ->
-        localProperties.load(reader)
-    }
-}
-
-def flutterRoot = localProperties.getProperty('flutter.sdk')
-if (flutterRoot == null) {
-    throw new Exception("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
-}
-
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
-
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
-}
-
-
 group 'com.jordanalcaraz.audiorecorder.audiorecorder'
 version '1.0-SNAPSHOT'
 
@@ -43,16 +19,7 @@ rootProject.allprojects {
         jcenter()
     }
 }
-
-
-//apply plugin: 'com.android.library'
-
-apply plugin: 'com.android.application'
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
-flutter {
-    source '../..'
-}
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
