--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,16 @@ dependencies:
 
 
 environment:
-  sdk: ">=2.0.0-dev.40.0.flutter-f981f09760 <3.0.0"
+  sdk: ">=2.0.0 <3.0.0"
 
 flutter:
   plugin:
-    androidPackage: com.jordanalcaraz.audiorecorder.audiorecorder
-    pluginClass: AudioRecorderPlugin
+    platforms:
+      android:
+        package: com.jordanalcaraz.audiorecorder.audiorecorder
+        pluginClass: AudioRecorderPlugin
+      ios:
+        pluginClass: AudioRecorderPlugin
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  test: ^1.3.0
   path_provider: ^1.1.0
