--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,5 @@
-group 'com.jordanalcaraz.audiorecorder.audiorecorder'
+group 'com.vickyleu.audiorecorder'
 version '1.0-SNAPSHOT'
-
 buildscript {
     repositories {
         google()
@@ -8,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
 
@@ -19,17 +18,59 @@ rootProject.allprojects {
         jcenter()
     }
 }
+//apply plugin: 'com.android.application'
 apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-
+    ndkVersion "21.3.6528147"
     defaultConfig {
         minSdkVersion 21
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cFlags "-Werror,-Wshift-negative-value "
+                cppFlags "-std=c++11 -stdlib=libc++ -nostdinc++ -frtti -fexceptions " // -DSTDC_HEADERS
+            }
+            ndk {
+                abiFilters "armeabi-v7a"//,"x86", "x86_64"
+            }
+        }
+    }
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.10.2"
+        }
     }
     lintOptions {
         disable 'InvalidPackage'
     }
 }
 
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader ->
+        localProperties.load(reader)
+    }
+}
+
+def flutterRoot = localProperties.getProperty('flutter.sdk')
+if (flutterRoot == null) {
+    throw new Exception("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+}
+
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+if (flutterVersionCode == null) {
+    flutterVersionCode = '1'
+}
+
+def flutterVersionName = localProperties.getProperty('flutter.versionName')
+if (flutterVersionName == null) {
+    flutterVersionName = '1.0'
+}
+//apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+//
+//flutter {
+//    source '../'
+//}
