--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,52 +23,55 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-    ndkVersion "21.3.6528147"
     defaultConfig {
         minSdkVersion 21
-        externalNativeBuild {
-            cmake {
-                cFlags "-Werror,-Wshift-negative-value "
-                cppFlags "-std=c++11 -stdlib=libc++ -nostdinc++ -frtti -fexceptions " // -DSTDC_HEADERS
-            }
-            ndk {
-                abiFilters "armeabi-v7a"//,"x86", "x86_64"
-            }
+//        externalNativeBuild {
+//            cmake {
+//                //设置cpp配置参数，c文件请使用CFlags
+//                cppFlags ""
+//                //设置生成指定ABI版本的so库
+//                abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'//,'armeabi','mips','mips64'
+//            }
+//        }
+    }
+    sourceSets{
+        main{
+            jniLibs.srcDirs = ['jniLibs']
         }
     }
-    externalNativeBuild {
-        cmake {
-            path "src/main/cpp/CMakeLists.txt"
-            version "3.10.2"
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//            version "3.10.2"
+//        }
+//    }
     lintOptions {
         disable 'InvalidPackage'
     }
 }
 
-def localProperties = new Properties()
-def localPropertiesFile = rootProject.file('local.properties')
-if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader('UTF-8') { reader ->
-        localProperties.load(reader)
-    }
-}
-
-def flutterRoot = localProperties.getProperty('flutter.sdk')
-if (flutterRoot == null) {
-    throw new Exception("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
-}
-
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
-
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
-}
+//def localProperties = new Properties()
+//def localPropertiesFile = rootProject.file('local.properties')
+//if (localPropertiesFile.exists()) {
+//    localPropertiesFile.withReader('UTF-8') { reader ->
+//        localProperties.load(reader)
+//    }
+//}
+//
+//def flutterRoot = localProperties.getProperty('flutter.sdk')
+//if (flutterRoot == null) {
+//    throw new Exception("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+//}
+//
+//def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+//if (flutterVersionCode == null) {
+//    flutterVersionCode = '1'
+//}
+//
+//def flutterVersionName = localProperties.getProperty('flutter.versionName')
+//if (flutterVersionName == null) {
+//    flutterVersionName = '1.0'
+//}
 //apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 //
 //flutter {
